--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "django-cloudinary-storage>=0.3.0",
     "whitenoise>=6.9.0",
     "psycopg2>=2.9.10",
+    "gunicorn>=23.0.0",
+    "uvicorn>=0.34.2",
 ]
 requires-python = "==3.13.*"
 readme = "README.md"
